--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,8 @@ package-lock.json
 yarn.lock
 pnpm-lock.yaml
 build
+test-results
+playwright-report
+blob-report
+playwright/.cache/
+playwright/.auth/
